[package]
name = "rekee"
version = "0.8.1"
authors = ["Tobias Rapp"]
edition = "2021"
description = "Track editor for the Rallyman:GT and Rallyman:DIRT boardgames"
homepage = "https://rekee.net"
repository = "https://github.com/t-rapp/rekee"
license = "MPL-2.0"
build = "build.rs"
rust-version = "1.61.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "export-svg"
required-features = ["svg"]

[features]
default = []
# Show Rallyman DIRT game tiles in the catalog by default
dirt = []
# Enables verbose log output. When compiled as a native library the output is
# written to standard error (stderr), when compiled for WASM log output is
# written to the JavaScript console.
logger = []
# Build the CSS file along with the WASM module.
style = []

[dependencies]
js-sys = "0.3.69"
nuts = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = { version = "0.13.1", optional = true }
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "CanvasRenderingContext2d",
  "console",
  "DataTransfer",
  "Document",
  "DomRect",
  "DomTokenList",
  "DragEvent",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "FontFace",
  "FontFaceSet",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "NodeList",
  "Range",
  "Storage",
  "SvgElement",
  "Text",
  "TextMetrics",
  "Window",
]

[build-dependencies]
grass = "0.12.4"

[dev-dependencies]
approx = "0.5.1"
getopts = "0.2.21"
indoc = "1.0.9"

[profile.release]
lto = "thin"
opt-level = "z"
codegen-units = 1

[lints]
clippy.assigning-clones = "warn"
clippy.cloned-instead-of-copied = "warn"
clippy.option-as-ref-cloned = "warn"
clippy.redundant_clone = "warn"
